# api

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yml  docker-build.yml
src/: bundle.rs  main.rs  utils.rs
src/api/: download.rs  manifest.rs  mod.rs  versions.rs
src/bundle/: fetch.rs  mod.rs
src/manifest/: mod.rs  v1.rs  v2.rs
