[package]
name = "bookshelf-api"
version = "1.3.0"
edition = "2024"
authors = ["Aksiome"]
description = "REST API for the Bookshelf project"
license = "MPL-2.0"

[dependencies]
anyhow = "1.0.99"
axum = "0.8.4"
bytes = "1.10.1"
cached = { version = "0.56.0", features = ["async"] }
dashmap = "6.1.0"
futures = "0.3.31"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["compression-full", "cors"] }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-rapidoc = { version = "6.0.0", features = ["axum"] }
zip = "4.5.0"

[profile.release]
strip = true
lto = true
opt-level = "s"
codegen-units = 1
